# fastapi-url-shortener

./: .gitignore  config.py  main.py  pyproject.toml
app/: main.py
app/api/endpoints/: user.py
routes/: user.py
