[tool.poetry]
name = "fastapi-url-shortener"
version = "0.1.0"
description = ""
authors = ["Wan <158989003+ridhwanmnr@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.3"

[tool.poetry.packages]
include = "app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
